--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <body>
     <header>
-        <h1>Weather App</h1>
+        <h1>Weather Report</h1>
         <input type="text" id="custom-city" placeholder="Enter a city">
         <button id="add-city">Add City</button>
     </header>
